Add sidewalk mapping features
Signed-off-by: Taylor Smock <tsmock@meta.com>